[package]
name = "pg_tiktoken"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg13"]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
pgx = { git = "https://github.com/vadim2404/pgx", branch = "neon_abi_v0.6.1" }
tiktoken-rs = { git = "https://github.com/kelvich/tiktoken-rs" }

[dev-dependencies]
pgx-tests = { git = "https://github.com/vadim2404/pgx", branch = "neon_abi_v0.6.1" }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
